--- a/config/workload-postgres.yaml
+++ b/config/workload-postgres.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     apps.tanzu.vmware.com/workload-type: web
     apps.tanzu.vmware.com/has-tests: "true"
-    app.kubernetes.io/part-of: motd
+    app.kubernetes.io/part-of: motd-backend
     networking.knative.dev/visibility: cluster-local
 spec:
   source:
@@ -15,7 +15,7 @@ spec:
         branch: main
   env:
   - name: SPRING_CONFIG_IMPORT
-    value: "optional:configtree:${SERVICE_BINDING_ROOT}/motd-config/"
+    value: optional:configtree:${SERVICE_BINDING_ROOT}/motd-config/
   serviceClaims:
   - name: motd-config
     ref:
